# arable_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: arable.ipynb
src/arable_api/: __init__.py  __main__.py  arable_api.py
tests/: test_api.py
