[tool.black]
line-length =72 

[project]
name = "arable_api"
version = "0.1.0"
description = "Arable API"
authors = [
    {name = "Jose Gomez-Dans", email = "jose.gomez-dans@kcl.ac.uk"},
]

scripts = {get_arable = "arable_api.__main__:main"}
dependencies = ["requests",
                "numpy",
                "pandas"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
